<resources>
    <string name="app_name">Daily Fuzzy</string>
    <string name="facebook_app_id">549629048469802</string>

    <string name="action_today">Today\'s Fuzzies</string>
    <string name="action_past">Past Fuzzies</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>

    <string name="action_save">Save to Gallery</string>
    <string name="action_favorites_add">Add to Favorites</string>
    <string name="action_favorites_del">Remove from Favorites</string>
    <string name="action_share">Share on Facebook</string>
    <string name="share_error">Facebook unsupported!</string>
    <string name="share_description">shared via Daily Fuzzy app for iOS and Android, curated by the Reddit community</string>

    <string name="notification_title">DAILY NOTIFICATIONS</string>
    <string name="notification_description">You\'ll be notified of a new fuzzy at the time below each day:</string>
    <string name="notification_action_title">There\'s a new fuzzy for you!</string>

    <string name="help_about">About</string>
    <string name="help_show_instruction">Show Instruction Page</string>
    <string name="help_how_to_post">How to Post Photos</string>
    <string name="help_email_dev">Email Developer</string>
    <string name="title_how_to_post">How Do I Post Photos?</string>
    <string name="message_how_to_post">Our photos are posted and curated by Reddit users.  To contribute your own photos, you must become a Reddit user and post to the r/aww subreddit.\n\n(Once you post a photo, it will be voted up or down by the Reddit community.  Posts must reach the top before getting automatically featured on Daily Fuzzy.)</string>
    <string name="button_see_reddit">See Reddit</string>
    <string name="button_ok">OK</string>

    <string name="title_instructions">Welcome to Daily Fuzzy!</string>
    <string name="message_instructions">Press on any picture / video to save or add to favorites.\n\nUse the top bar to browse previous fuzzies and favorites, or to see the rest of a title.</string>

    <string name="title_about">Daily Fuzzy v.%s</string>
    <string name="desc_about">Picture selection is powered by Reddit, with additional meta-filtering to maximize quality. More fuzzies are added each day. Press on a picture for options.\n\nI originally made this app for my wife, who thought it should be shared with the world.\n\n\u00A9 2017 Regaip Sen. All rights reserved.</string>

    <string name="toast_saved">Fuzzy saved!</string>
    <string name="toast_favorites_added">Added to Favorites</string>
    <string name="toast_favorites_removed">Removed from Favorites</string>
    <string name="popup_loading_title">Loading</string>
    <string name="popup_loading_message">Please wait while fuzzies are loading...</string>
    <string name="text_empty_favorites">You can add to favorites by pressing on a picture.</string>

</resources>
