<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".PictureActivity">
    <item android:id="@+id/action_today" android:title="@string/action_today"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_past" android:title="@string/action_past"
        android:orderInCategory="101" app:showAsAction="never" />
    <item android:id="@+id/action_favorites" android:title="@string/action_favorites"
        android:orderInCategory="102" app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="103" app:showAsAction="never" />
    <item android:id="@+id/action_help" android:title="@string/action_help"
        android:orderInCategory="104" app:showAsAction="never" />
</menu>
